<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:title="Статистика"
        app:titleTextColor="@color/white" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutOperation"
        style="@style/Widget.App.ExposedDropdownMenu"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/spinner_operation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <AutoCompleteTextView
            android:id="@+id/spinnerOperation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutWorkPlace"
        style="@style/Widget.App.ExposedDropdownMenu"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/spinner_workplace"
        app:layout_constraintStart_toEndOf="@+id/textInputLayoutOperation"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <AutoCompleteTextView
            android:id="@+id/spinnerWorkPlace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textDateFrom"
        style="@style/OutlinedRoundedBox"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/date_from"
        app:layout_constraintStart_toEndOf="@+id/textInputLayoutWorkPlace"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dateFrom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textDateTo"
        style="@style/OutlinedRoundedBox"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/date_to"
        app:layout_constraintStart_toEndOf="@+id/textDateFrom"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dateTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonPaint"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:padding="16dp"
        android:layout_marginStart="8dp"
        android:text="@string/button_paint"
        app:layout_constraintBaseline_toBaselineOf="@+id/textDateTo"
        app:layout_constraintStart_toEndOf="@+id/textDateTo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutOperation" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.Holo.Light.ProgressBar.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutOperation" />

</androidx.constraintlayout.widget.ConstraintLayout>